# Twitter

./: .gitignore  BUILDLOG.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
backend/: .env  pyproject.toml  tasks.py
backend/tests/domain/: test_tweets.py  test_users.py
backend/tests/service/: conftest.py
backend/tests/service/features/: get_all_tweets.feature  write_a_tweet.feature
backend/tests/service/features/steps/: write_a_tweet_steps.py
backend/tests/service/steps/: test_get_tweets.py  test_write_a_tweet.py
backend/twitter/domain/: auth.py  models.py
backend/twitter/domain/repository/: tweet_repository.py
backend/twitter/interface/: settings.py
backend/twitter/interface/rest/: main.py
backend/twitter/interface/websocket/: main.py
backend/twitter/service/: __init__.py  tweet_service.py
frontend/twitter/: .env  package.json  pnpm-lock.yaml  vite.config.js
frontend/twitter/src/: App.jsx  main.jsx  store.js
