[tool.poetry]
name = "twitter"
version = "0.1.0"
description = ""
authors = ["Matthew Coyle <mattcoyle48@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.102.0"
python-jose = "^3.3.0"


[tool.poetry.group.test.dependencies]
behave = "^1.2.6"
pytest = "^7.4.0"
coverage = "^7.3.0"


[tool.poetry.group.dev.dependencies]
invoke = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
